# RustyCDN

./: Makefile  README.md  deployCDN  httpservers.txt  runCDN  stopCDN
dns_server/: Cargo.toml
dns_server/src/: dns_server.rs  main.rs  utils.rs
dns_server/target 2/: .rustc_info.json
dns_server/target 2/debug/.fingerprint/anstream-beedddb5f19d7feb/: lib-anstream  lib-anstream.json
dns_server/target 2/debug/.fingerprint/anstyle-fbecf59d0befe050/: lib-anstyle  lib-anstyle.json
dns_server/target 2/debug/.fingerprint/anstyle-parse-0ad98e72269fdbcc/: lib-anstyle-parse  lib-anstyle-parse.json
dns_server/target 2/debug/.fingerprint/anstyle-query-d9ba5e8ce59e3ef5/: lib-anstyle-query  lib-anstyle-query.json
dns_server/target 2/debug/.fingerprint/autocfg-0fce9f22796a6f04/: lib-autocfg  lib-autocfg.json
dns_server/target 2/debug/.fingerprint/base64-70cc157ac432149b/: lib-base64  lib-base64.json
dns_server/target 2/debug/.fingerprint/base64-84ec582965d92a40/: lib-base64  lib-base64.json
dns_server/target 2/debug/.fingerprint/bitflags-24220e03e8a76128/: lib-bitflags  lib-bitflags.json
dns_server/target 2/debug/.fingerprint/bitflags-b05014d41e8c1839/: lib-bitflags  lib-bitflags.json
dns_server/target 2/debug/.fingerprint/bytes-fd10a0052b3c057d/: lib-bytes  lib-bytes.json
dns_server/target 2/debug/.fingerprint/cc-6fb08edb67a75ecc/: lib-cc  lib-cc.json
dns_server/target 2/debug/.fingerprint/cfg-if-2b60f5521a0a8477/: lib-cfg-if  lib-cfg-if.json
http_server/: Cargo.toml
http_server/src/: main.rs
http_server/src/util/: cache_system.rs  cl_parser.rs  mod.rs
(+260 files in other folders)
