[package]
name = "dns_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.2"
ipgeolocate = "0.3.5"
tokio = { version = "1.0", features = ["full"] }
geoutils = "0.5.1"
dns-message-parser = "0.7.0"
bytes = "1.0.1"
openssl-sys = {version = "0.9.102" , features = ["vendored"]}
reqwest = "0.12.3"